# freq-motif-fastq

./: .gitlab-ci.yml  Dockerfile  Makefile  README.md
freq-motif-fastq/: Cargo.toml
freq-motif-fastq/src/: main.rs
scripts/: generate_barplot.R  sdust
