[package]
name = "freq-motif-fastq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "<4.4.7", features = ["derive"] }
yeslogic-fontconfig-sys = "<5.0.0"
plotters = "<0.3.4"
flate2 = "1.0"
uuid = { version = "1.3", features = ["v4"] }
